Fixed broken path to example.swf. Adjusted image top margins in jayway.css for alignment with code blocks.

--- a/reveal.js/css/theme/jayway.css
+++ b/reveal.js/css/theme/jayway.css
@@ -94,7 +94,7 @@ ol li {margin-bottom: 0.5em;}
 *********************************************/
 
 .reveal section img {
-    margin: 30px 0 0 0;
+    margin: 10px 0 0 0;
     background: rgba(255,255,255,0.12);
     border: 4px solid #eee;
 
